Fix scroll overflow on header

--- a/src/style.css
+++ b/src/style.css
@@ -107,28 +107,45 @@ dialog {
 }
 
 .pkmn-details-dialog {
+    --dot-size: 0.5px;
+
     box-shadow: 0px 0px 53px 0px;
 
     background-image: radial-gradient(
-            var(--bg-modal-color) 0.5px,
-            transparent 0.5px
+            var(--bg-modal-color) var(--dot-size),
+            transparent var(--dot-size)
         ),
-        radial-gradient(var(--bg-modal-color) 0.5px, rgba(255,255,255,0) 0.5px),
+        radial-gradient(var(--bg-modal-color) var(--dot-size), rgba(255,255,255,0) var(--dot-size)),
         linear-gradient(0deg, var(--bg-modal-color) 0%, var(--bg-modal-color) 6.05%, rgba(255,255,255,0) 6.05%);
     background-size: 20px 20px, 20px 20px, 100% 1210px;
     background-position: 0 0, 10px 10px, center bottom -12px;
     background-repeat: repeat, repeat, no-repeat;
+
+    .main-infos {
+        background-image: radial-gradient(
+            var(--bg-modal-color) var(--dot-size),
+            transparent var(--dot-size)
+        ),
+        radial-gradient(var(--bg-modal-color) var(--dot-size), #fff var(--dot-size));
+        background-size: 20px 20px, 20px 20px;
+        background-position: -17px 0, 10px 10px;
+
+        .sticky-header {
+            &::before {
+                content: "";
+                display: block;
+                bottom: 100%;
+                background-color: inherit;
+                height: 500px;
+                position: absolute;
+                left: 0;
+                right: 0;
+            }
+        }
+    }
 }
 
-.main-infos {
-    background-image: radial-gradient(
-        var(--bg-modal-color) 0.5px,
-        transparent 0.5px
-    ),
-    radial-gradient(var(--bg-modal-color) 0.5px, #fff 0.5px);
-    background-size: 20px 20px, 20px 20px;
-    background-position: -17px 0, 10px 10px;
-}
+
 
 .type-name {
     font-weight: bold;
